crates/ars-components/src/overlay/floating_panel/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_minimize_trigger.snap
---
source: crates/ars-components/src/overlay/floating_panel/mod.rs
expression: snapshot_attrs(&api.minimize_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "minimize-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Minimize panel",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
